<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeParent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intenciones"
        android:textColor="#6B6B6B"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnMensaje"
        android:layout_below="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnWeb"
        android:layout_below="@+id/btnMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnLlamar"
        android:layout_below="@+id/btnWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llamar"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnMapa"
        android:layout_below="@+id/btnLlamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapa"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnFoto"
        android:layout_below="@+id/btnMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnCorreo"
        android:layout_below="@+id/btnFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnStreetView"
        android:layout_below="@+id/btnCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street_view"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"/>

</RelativeLayout>